Restructure paths handling in the launcher
- move the dialog into a new ‘add-ons’ tab

- separate out ‘restore settings’ from selecting a new fg-data

- actually relaunch the app

--- a/src/GUI/Launcher.ui
+++ b/src/GUI/Launcher.ui
@@ -269,6 +269,16 @@
        <property name="bottomMargin">
         <number>8</number>
        </property>
+       <item row="8" column="0">
+        <widget class="QPushButton" name="restoreDefaultsButton">
+         <property name="text">
+          <string>Restore Defaults...</string>
+         </property>
+         <property name="autoDefault">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
        <item row="0" column="0">
         <layout class="QHBoxLayout" name="horizontalLayout_4">
          <item>
@@ -442,7 +452,7 @@
          </item>
         </layout>
        </item>
-       <item row="8" column="0" colspan="2">
+       <item row="7" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox_2">
          <property name="title">
           <string>Additional options</string>
@@ -470,7 +480,7 @@
          </layout>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="6" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -482,23 +492,6 @@
           </size>
          </property>
         </spacer>
-       </item>
-       <item row="6" column="0">
-        <widget class="QPushButton" name="pathsButton">
-         <property name="text">
-          <string>Configure add-on aircraft and scenery…</string>
-         </property>
-         <property name="startupOnly" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="1">
-        <widget class="QPushButton" name="changeRootButton">
-         <property name="text">
-          <string>Change data files location…</string>
-         </property>
-        </widget>
        </item>
       </layout>
      </widget>
@@ -535,6 +528,9 @@
         <string>Run</string>
        </property>
        <property name="autoDefault">
+        <bool>false</bool>
+       </property>
+       <property name="default">
         <bool>false</bool>
        </property>
        <property name="flat">
