--- a/src/GUI/SetupRootDialog.ui
+++ b/src/GUI/SetupRootDialog.ui
@@ -116,7 +116,7 @@
    <item row="6" column="1">
     <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>To download a compressed archive of the files, click the 'Download' button. Once the download is complete, extract the files to a suitabe location and choose the folder using the button above.</string>
+      <string>To download a compressed archive of the files, click the 'Download' button. Once the download is complete, extract the files to a suitable location and choose the folder using the button above.</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
