Launcher: spelling fix in "Add Catalog" dialog window

--- a/src/GUI/AddCatalogDialog.ui
+++ b/src/GUI/AddCatalogDialog.ui
@@ -61,7 +61,7 @@
           </sizepolicy>
          </property>
          <property name="text">
-          <string>Please waiting, downloading and checking the hangar information.</string>
+          <string>Please wait, downloading and checking the hangar information.</string>
          </property>
         </widget>
        </item>
