Launcher: state that it is needed to press Enter to search for the airport

--- a/src/GUI/LocationWidget.ui
+++ b/src/GUI/LocationWidget.ui
@@ -339,7 +339,7 @@
          <item>
           <widget class="QLineEdit" name="locationSearchEdit">
            <property name="placeholderText">
-            <string>Enter an ICAO code, navaid or search by name</string>
+            <string>Enter an ICAO code, navaid or name, then press Enter</string>
            </property>
            <property name="clearButtonEnabled">
             <bool>true</bool>
