Allow scenery installation from the launcher.
Replaces FGadmin functionality.

--- a/src/GUI/PathsDialog.ui
+++ b/src/GUI/PathsDialog.ui
@@ -107,6 +107,30 @@
     </layout>
    </item>
    <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_3">
+     <item>
+      <widget class="QPushButton" name="installSceneryButton">
+       <property name="text">
+        <string>Install downloaded scenery...</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_6">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+   <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Additional scenery locations</string>
