--- a/src/GUI/Launcher.ui
+++ b/src/GUI/Launcher.ui
@@ -507,6 +507,9 @@
          <property name="checkable">
           <bool>true</bool>
          </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
          <layout class="QGridLayout" name="gridLayout" columnstretch="1,2,0">
           <item row="0" column="0">
            <widget class="QLabel" name="label_9">
