Launcher: fix ‘midnight’ time of day option.
TimeManager uses ‘midnight’ so we need to do the same.

--- a/src/GUI/Launcher.ui
+++ b/src/GUI/Launcher.ui
@@ -330,7 +330,7 @@
            </item>
            <item>
             <property name="text">
-             <string>Night</string>
+             <string>Midnight</string>
             </property>
            </item>
           </widget>
