--- a/src/GUI/PathsDialog.ui
+++ b/src/GUI/PathsDialog.ui
@@ -14,6 +14,21 @@
    <string>Configure add-ons</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>4</number>
+   </property>
+   <property name="leftMargin">
+    <number>4</number>
+   </property>
+   <property name="topMargin">
+    <number>4</number>
+   </property>
+   <property name="rightMargin">
+    <number>4</number>
+   </property>
+   <property name="bottomMargin">
+    <number>4</number>
+   </property>
    <item>
     <widget class="QLabel" name="dataLocation">
      <property name="text">
@@ -41,6 +56,11 @@
      </item>
      <item>
       <widget class="QLabel" name="label_4">
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>FlightGear needs certain files (sometimes called 'fg-data') to function - these are included as part of stable releases.</string>
        </property>
@@ -82,6 +102,11 @@
      </item>
      <item>
       <widget class="QLabel" name="label_2">
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
        <property name="text">
         <string>Aircraft hangars and automatic scenery downloads may cause this location to contain large numbers of files. Changing this location will cause files to be downloaded again.</string>
        </property>
@@ -137,16 +162,16 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
       <property name="leftMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="topMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="rightMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="bottomMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="spacing">
        <number>0</number>
@@ -204,6 +229,11 @@
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label">
+        <property name="font">
+         <font>
+          <pointsize>11</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Drag to re-order</string>
         </property>
@@ -222,16 +252,16 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_6">
       <property name="leftMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="topMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="rightMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="bottomMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="spacing">
        <number>0</number>
@@ -311,16 +341,16 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_4">
       <property name="leftMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="topMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="rightMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="bottomMargin">
-       <number>8</number>
+       <number>6</number>
       </property>
       <property name="spacing">
        <number>0</number>
@@ -378,6 +408,11 @@
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_3">
+        <property name="font">
+         <font>
+          <pointsize>11</pointsize>
+         </font>
+        </property>
         <property name="text">
          <string>Drag to re-order</string>
         </property>
