Added the missing FG icons to the Qt dialogs

--- a/src/GUI/AddCatalogDialog.ui
+++ b/src/GUI/AddCatalogDialog.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Add aircraft hangar</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resources.qrc">
+    <normaloff>:/app-icon-large</normaloff>:/app-icon-large</iconset>
+  </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QStackedWidget" name="stack">
@@ -114,7 +118,9 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
