--- a/src/GUI/EditCustomMPServerDialog.ui
+++ b/src/GUI/EditCustomMPServerDialog.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Enter custom server</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="resources.qrc">
+    <normaloff>:/app-icon-large</normaloff>:/app-icon-large</iconset>
+  </property>
   <layout class="QGridLayout" name="gridLayout" columnstretch="1,1">
    <item row="0" column="0" colspan="2">
     <widget class="QLabel" name="label_3">
@@ -76,7 +80,9 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>buttonBox</sender>
