Changed aircraft list's scrolling policy to *ScroolPerPixels*, because items have non-regular height.

--- a/src/GUI/Launcher.ui
+++ b/src/GUI/Launcher.ui
@@ -304,7 +304,14 @@
         </layout>
        </item>
        <item>
-        <widget class="QListView" name="aircraftList"/>
+        <widget class="QListView" name="aircraftList">
+         <property name="verticalScrollMode">
+          <enum>QAbstractItemView::ScrollPerPixel</enum>
+         </property>
+         <property name="horizontalScrollMode">
+          <enum>QAbstractItemView::ScrollPerPixel</enum>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
